--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/andrewkukhar/djr/issues"
   },
-  "homepage": "https://github.com/andrewkukhar/djr",
+  "homepage": "https://andrewkukhar/github.io/djr",
   "browserslist": {
     "production": [
       ">0.2%",
