--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "djr",
   "version": "1.0.0",
+  "homepage": "https://andrewkukhar/github.io/djr",
   "description": "djr",
   "main": "index.js",
   "dependencies": {
@@ -9,7 +10,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "test": "test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
@@ -25,7 +27,6 @@
   "bugs": {
     "url": "https://github.com/andrewkukhar/djr/issues"
   },
-  "homepage": "https://andrewkukhar/github.io/djr",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
