--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "djr",
   "version": "1.0.0",
-  "homepage": "https://andrewkukhar.github.io/djr/",
+  "homepage": "https://andrewkukhar.github.io/djr",
   "description": "djr",
   "main": "index.js",
   "dependencies": {
