--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node server.js",
+    "build": "env-cmd -f .env.development react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "dev": "env-cmd -f .env.development react-scripts start",
-    "local": "env-cmd -f .env.local react-scripts start"
+    "local": "env-cmd -f .env.local react-scripts start",
+    "heroku-postbuild": "env-cmd -f .env.production npm run build"
   },
   "repository": {
     "type": "git",
