--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "index.js",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "express": "^4.18.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
@@ -16,15 +15,17 @@
     "@reduxjs/toolkit": "^1.9.7",
     "date-fns": "^2.30.0",
     "emailjs-com": "^3.2.0",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "node server.js",
@@ -61,7 +62,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^5.0.0",
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "gh-pages": "^5.0.0"
   }
 }
