--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@mui/x-date-pickers": "^6.10.0",
     "@reduxjs/toolkit": "^1.9.7",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.11",
+    "dayjs-plugin-utc": "^0.1.2",
+    "dayjs-timezone-iana-plugin": "^0.1.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
