--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs-timezone-iana-plugin": "^0.1.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
