--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
     "@mui/material": "^5.14.0",
     "@mui/x-data-grid": "^7.23.0",
     "@mui/x-date-pickers": "^6.10.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/get-file": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/print": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
+    "@react-pdf/renderer": "^4.1.5",
     "@reduxjs/toolkit": "^1.9.7",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
@@ -20,7 +29,9 @@
     "dayjs-timezone-iana-plugin": "^0.1.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
