small domain adjustments

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "djr",
   "version": "1.0.0",
-  "homepage": "https://www.djsrise.com/",
+  "homepage": "https://www.djrise.party/",
   "description": "djr",
   "main": "index.js",
   "dependencies": {
