--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-pdf-viewer/zoom": "^3.12.0",
     "@react-pdf/renderer": "^4.1.5",
     "@reduxjs/toolkit": "^1.9.7",
+    "cloudinary-core": "^2.13.1",
+    "cloudinary-video-player": "^2.3.5",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
     "dayjs-plugin-utc": "^0.1.2",
