--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": "https://www.djrise.party/",
   "description": "djr",
   "main": "index.js",
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
@@ -43,7 +47,8 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "node server.js",
