--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jwt-decode": "^4.0.0",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.3",
